Add API for initiative events.
